force-app/main/default/objects/Case/fields/eeoc_AJ_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>eeoc_AJ_Assigned_Date__c</fullName>
    <label>AJ Assigned Date</label>
    <type>Date</type>
</CustomField>