force-app/main/default/objects/Case/fields/eeoc_Case_Stage__c.field-meta.xml
<CustomField>
    <fullName>eeoc_Case_Stage__c</fullName>
    <label>Case Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Complaint</fullName>
                <default>true</default>
                <label>Pre-Complaint</label>
            </value>
            <value>
                <fullName>Formal Complaint</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>AJ Hearing</fullName>
            </value>
            <value>
                <fullName>Final Agency Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>