force-app/main/default/objects/Case/fields/eeoc_Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>eeoc_Days_Remaining__c</fullName>
    <formula>MAX(eeoc_Current_Deadline__c - TODAY(), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>