force-app/main/default/objects/Case/fields/eeoc_Discovery_End_Date__c.field-meta.xml
<CustomField>
    <fullName>eeoc_Discovery_End_Date__c</fullName>
    <label>Discovery End Date</label>
    <type>Date</type>
</CustomField>