force-app/main/default/objects/Case/fields/eeoc_Discovery_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>eeoc_Discovery_Start_Date__c</fullName>
    <label>Discovery Start Date</label>
    <type>Date</type>
</CustomField>