force-app/main/default/objects/Case/fields/eeoc_Finding_of_Discrimination__c.field-meta.xml
<CustomField>
    <fullName>eeoc_Finding_of_Discrimination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finding of Discrimination</label>
    <type>Checkbox</type>
</CustomField>