force-app/main/default/objects/Case/fields/eeoc_Hearing_Requested__c.field-meta.xml
<CustomField>
    <fullName>eeoc_Hearing_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hearing Requested</label>
    <type>Checkbox</type>
</CustomField>