force-app/main/default/objects/Case/fields/eeoc_Initial_Review__c.field-meta.xml
<CustomField>
    <fullName>eeoc_Initial_Review__c</fullName>
    <label>Initial Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Closed - No Action Needed</fullName>
            </value>
            <value>
                <fullName>Closed - Further Action Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>