force-app/main/default/objects/Case/fields/eeoc_Investigation_Period_End__c.field-meta.xml
<CustomField>
    <fullName>eeoc_Investigation_Period_End__c</fullName>
    <label>Investigation Period End</label>
    <type>Date</type>
</CustomField>