force-app/main/default/objects/Case/fields/eeoc_Limited_Inquiry_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>eeoc_Limited_Inquiry_Start_Date__c</fullName>
    <label>Limited Inquiry Start Date</label>
    <type>Date</type>
</CustomField>