force-app/main/default/objects/Case/fields/eeoc_Pre_Complaint_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>eeoc_Pre_Complaint_Start_Date__c</fullName>
    <label>Pre-Complaint Start Date</label>
    <type>Date</type>
</CustomField>