force-app/main/default/objects/Case/fields/eeoc_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>eeoc_Processed_Date__c</fullName>
    <label>Processed Date</label>
    <type>Date</type>
</CustomField>