force-app/main/default/objects/Case/fields/eeoc_Rights_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>eeoc_Rights_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rights Acknowledged</label>
    <type>Checkbox</type>
</CustomField>