force-app/main/default/objects/Case/fields/eeoc_Rights_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>eeoc_Rights_Notification_Date__c</fullName>
    <label>Rights Notification Date</label>
    <type>Date</type>
</CustomField>