force-app/main/default/objects/Case/fields/eeoc_Status__c.field-meta.xml
<CustomField>
    <fullName>eeoc_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pre-complaint</fullName>
            </value>
            <value>
                <fullName>Complaint Review</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>AJ Processing</fullName>
            </value>
            <value>
                <fullName>Closed - Dismissed</fullName>
            </value>
            <value>
                <fullName>Closed - Settlement</fullName>
            </value>
            <value>
                <fullName>Closed - Corrective Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>