force-app/main/default/objects/Case/recordTypes/EEO_Formal_Complaint.recordType-meta.xml
<RecordType>
    <fullName>EEO_Formal_Complaint</fullName>
    <active>true</active>
    <businessProcess>EEOC Process</businessProcess>
    <label>EEO Formal Complaint</label>
</RecordType>