force-app/main/default/objects/Case/recordTypes/EEO_Pre_Complaint.recordType-meta.xml
<RecordType>
    <fullName>EEO_Pre_Complaint</fullName>
    <active>true</active>
    <businessProcess>EEOC Process</businessProcess>
    <label>EEO Pre-Complaint</label>
</RecordType>