force-app/main/default/objects/Case/recordTypes/EEOC.recordType-meta.xml
<RecordType>
    <fullName>EEOC</fullName>
    <active>true</active>
    <businessProcess>EEOC Process</businessProcess>
    <label>EEOC</label>
</RecordType>