force-app/main/default/objects/Case/validationRules/Cant_Close_without_Resolution.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Close_without_Resolution</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(eeoc_Status__c, &quot;Closed - Dismissed&quot;), ISPICKVAL(eeoc_Status__c, &quot;Closed - Settlement&quot;), ISPICKVAL(eeoc_Status__c, &quot;Closed - Corrective Action&quot;)),
 ISPICKVAL( eeoc_Resolution_Type__c, &quot;&quot; ))</errorConditionFormula>
    <errorMessage>Cannot close a case without a resolution type.</errorMessage>
</ValidationRule>