force-app/main/default/objects/Case/listViews/All_EEO_Pre_Complaints.listView-meta.xml
<ListView>
    <fullName>All_EEO_Pre_Complaints</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.EEO_Pre_Complaint</value>
    </filters>
    <label>All EEO Pre-Complaints</label>
</ListView>