force-app/main/default/objects/Case/listViews/EEO_Pending_Initial_Review.listView-meta.xml
<ListView>
    <fullName>EEO_Pending_Initial_Review</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.EEOC</value>
    </filters>
    <filters>
        <field>eeoc_Initial_Review__c</field>
        <operation>equals</operation>
        <value>Pending Review</value>
    </filters>
    <label>EEO Pending Initial Review</label>
</ListView>