force-app/main/default/objects/Case/listViews/EEO_Pre_Complaints_Last_30_Days.listView-meta.xml
<ListView>
    <fullName>EEO_Pre_Complaints_Last_30_Days</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.EEO_Pre_Complaint</value>
    </filters>
    <filters>
        <field>DateTime_Opened_c__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>EEO Pre-Complaints - Last 30 Days</label>
</ListView>